--- a/index.html
+++ b/index.html
@@ -46,11 +46,7 @@
           ></audio>
         </div>
       </div>
-      <img
-        cla7042078421@Kunalss="first-deepak"
-        src="images/deepak.png"
-        alt="deepak"
-      />
+      <img class="first-deepak" src="images/deepak.png" alt="deepak" />
       <img class="second-deepak" src="images/deepak.png" alt="deepak" />
     </section>
     <section class="laxmi-gadas">
